# FPA-2OPT-CUDA

./: .gitignore  README.md
algorithm/: CMakeCache.txt  CMakeLists.txt  Makefile  algorithm  cmake_install.cmake  drone.h  fitnessComputer.cpp  fitnessComputer.cu  fitnessComputer.cuh  fitnessComputer.h  fitnessComputer_seq.cu  fitnessComputer_seq.cuh  fpa.cu  fpa.cuh  initialSolutionGenerator.cu  initialSolutionGenerator.cuh  iolib.cpp  iolib.cu  iolib.cuh  iolib.h  main.cu  pathSmoother.cu  pathSmoother.cuh  pathSmoother_parallel.cpp  pathSmoother_parallel.h  paths.cpp  paths.h  pollinator.cu  pollinator.cuh  pollinator_parallel.cpp  pollinator_parallel.h  speedup_test.sh  twoOpt_parallel.cpp  twoOpt_parallel.h  utils.cu  utils.cuh
algorithm/cuda/: fitnessComputer_cuda.cu  fitnessComputer_cuda.cuh  fpa_cuda.cu  fpa_cuda.cuh  init_generator_cuda.cu  init_generator_cuda.cuh  pathSmoother_cuda.cu  pathSmoother_cuda.cuh  pollinator_cuda.cu  pollinator_cuda.cuh  twoOpt_cuda.cu  twoOpt_cuda.cuh
algorithm/objects/: config.h  drone.cpp  drone.h  initialConditions.cpp  initialConditions.h  paths.cpp  paths.h  results.cpp  results.h
algorithm/parallel/: fitnessComputer_parallel.cpp  fitnessComputer_parallel.h  fpa_parallel.cpp  fpa_parallel.h  init_generator_parallel.cpp  init_generator_parallel.h  pathSmoother_parallel.cpp  pathSmoother_parallel.h  pollinator_parallel.cpp  pollinator_parallel.h  twoOpt_parallel.cpp  twoOpt_parallel.h
config/: config.json  drone.json  init.json
data/paths/: fittest4.csv  fittest5.csv  fittest_cuda.csv  fittest_omp.csv
heightMapper/: CPU_componentplot.py  CUDA_componentplot.py  allHardwareVisualizer_1s.py  allHardwareVisualizer_5s.py  averager.py  averages.txt  config.json  drone.json  file_averages.txt  fitnessEvolutionBenchmarker.py  fitnessEvolutionBenchmarker_10s.py  fitnessEvolutionBenchmarker_cuda.py  fitnessEvolutionBenchmarker_cuda_10s.py  fitnessEvolutionVisualizer_cuda.py  fitnessEvolutionVisualizer_omp.py  heightMapParser.py  heightMapVisualizer.py  height_map.npy  init.json  line_averages.txt  line_averages_cuda_gracy.txt  line_averages_cuda_laptop.txt  line_averages_gracy.txt  main.py  pathLengthBenchmarker.py  pathlengthvisualizer_cuda.py  speedupPlot.py  timeBenchmarker.py  utils.py
heightMapper/heightmaps/: switzerland.json  switzerland2.json
